k8s/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-fastapi-deployment
  labels:
    app: python-app-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app-fastapi
  template:
    metadata:
      labels:
        app: python-app-fastapi
    spec:
      containers:
      - name: python-app-fastapi-container
        image: rafacv99/python-app-fastapi:latest
        ports:
        - name: app-port
          containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "1"
