k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: python-app-fastapi-mysql-statefulset
spec:
  serviceName: python-app-fastapi-mysql-headless
  replicas: 1
  selector:
    matchLabels:
      app: python-app-fastapi-mysql
  template:
    metadata:
      labels:
        app: python-app-fastapi-mysql
    spec:
      containers:
        - name: python-app-fastapi-mysql
          image: mysql
          ports:
            - name: mysql-port
              containerPort: 3306
