k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-fastapi-service
spec:
  selector:
    app: python-app-fastapi
  ports:
  - name: app-port
    protocol: TCP
    port: 8082
    targetPort: app-port
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-fastapi-mysql-headless
spec:
  selector:
    app: python-app-fastapi-mysql
  ports:
  - name: mysql-port
    protocol: TCP
    port: 3306
    targetPort: mysql-port
  type: ClusterIP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-fastapi-mysql-service
spec:
  selector:
    app: python-app-fastapi-mysql
  ports:
  - name: mysql-port
    protocol: TCP
    port: 3306
    targetPort: mysql-port
  type: ClusterIP
