k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-fastapi-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: python-app
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: python-app-fastapi-service
                port:
                  name: app-port
